--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
   <header>NAFWasTaken's Unblocked Games</header>
 
   <div id="search-container">
-    <button id="proxy-button">Proxy Menu</button>
-    <input type="text" id="search-input" placeholder="Search games...">
-    <button id="cloak-button">Cloak</button>
+    <button id="proxy-button">Proxy</button>
+    <input type="text" id="search-input" placeholder="🔎Search games...">
+    <button id="cloak-button">Cloak (Turn Into about:blank)</button>
   </div>
 
   <div id="game-list"></div>
