--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type=image/ico href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NAFWasTaken's Unblocked Games</title>
+  <title>Home</title>
   <style>
     body {
       margin: 0;
