--- a/index.html
+++ b/index.html
@@ -195,5 +195,15 @@
       window.location.href = "/proxy.html";
     });
   </script>
+<div id="bottom-buttons" style="text-align: center; margin: 2rem 0;">
+  <button onclick="window.location.href='https://docs.google.com/forms/d/e/1FAIpQLScKqgAmOkRROX6KlfsqDQQOOwfE7fmMBhqiBzSgcpx85YgCjw/viewform?usp=header'" 
+          style="padding: 0.7rem 1.5rem; margin: 0.5rem; background-color: #444; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
+    Recommend a Game
+  </button>
+  <button onclick="window.location.href='/update-log.html'" 
+          style="padding: 0.7rem 1.5rem; margin: 0.5rem; background-color: #444; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
+    View Update Log
+  </button>
+</div>
 </body>
 </html>
