--- a/index.html
+++ b/index.html
@@ -200,6 +200,12 @@
           style="padding: 0.7rem 1.5rem; margin: 0.5rem; background-color: #444; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
     Recommend a Game
   </button>
+<div id="bottom-buttons" style="text-align: center; margin: 2rem 0;">
+  <button onclick="window.location.href='https://docs.google.com/presentation/d/1zaowX0YkBVoiL1k4QYvalBMnW0qa8ptYxlyro6v-MJM/edit?usp=sharing'" 
+          style="padding: 0.7rem 1.5rem; margin: 0.5rem; background-color: #444; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
+    Games not loading? Click here!
+  </button>
+
   <button onclick="window.location.href='/update-log.html'" 
           style="padding: 0.7rem 1.5rem; margin: 0.5rem; background-color: #444; color: #fff; border: none; border-radius: 5px; cursor: pointer;">
     View Update Log
