--- a/update-log.html
+++ b/update-log.html
@@ -39,6 +39,11 @@
   </button>
 </div>
 
+ <div class="update">
+    <h2>The "Indie" Update</h2>
+    <p>Added 4 New Games! One Night at Freddys, a FNAF recreation on Scratch/Turbowarp, FNaF 2, one again, a recreation, FNaF 3, can you guess what im going to say? WOW! Its a recreation. And finally, UNDERTALE (Also A recreation lol).</p>
+  </div>
+
   
   <div class="update">
     <h2>May 16, 2025</h2>
