--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       border-radius: 5px;
       cursor: pointer;
     }
-    #proxy-button:hover, #cloak-button:hover {
+    #proxy-button:hover, #cloak-button:hover, #bottom-buttons:hover  {
       background-color: #666;
     }
     #game-list {
