--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <header>NAFWasTaken's Unblocked Games</header>
 
   <div id="search-container">
-    <button id="proxy-button">Proxy</button>
+    <button id="proxy-button">Proxy (Not Working, Ultraviolet Update :/)</button>
     <input type="text" id="search-input" placeholder="🔎Search games...">
     <button id="cloak-button">Cloak (Turn Into about:blank)</button>
   </div>
